--- a/Server_Code/templates/join.html
+++ b/Server_Code/templates/join.html
@@ -76,5 +76,80 @@
 	</div>
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script src="../static/js/bootstrap.js"></script>
+		<script>
+		const form = document.querySelector('form'); // 폼 엘리먼트를 선택합니다.
+		const userIDInput = document.querySelector('input[name="userID"]'); // 아이디 입력 필드 선택
+		const userPasswordInput = document.querySelector('input[name="userPassword"]'); // 비밀번호 입력 필드 선택
+		const userNameInput = document.querySelector('input[name="userName"]'); // 이름 입력 필드 선택
+		const BirthyyInput = document.querySelector('input[name="userBirthyy"]'); // 출생 연도 입력 필드 선택
+		const BirthddInput = document.querySelector('input[name="userBirthdd"]'); // 출생 일자 입력 필드 선택
+		const userPhoneInput = document.querySelector('input[name="userPhone"]'); // 휴대전화 입력 필드 선택
+		const userEmailInput = document.querySelector('input[name="userEmail"]'); // 이메일 입력 필드 선택
+
+		// 아이디 유효성 검사
+		var IDregex = /^[a-z0-9]{5,20}$/; 
+		// 비밀번호 유효성 검사
+		var PasswordRegex = /^(?=.*[a-z])(?=.*\d)(?=.*[!@#$%^&*])[a-zA-Z\d!@#$%^&*]{8,16}$/; 
+		// 이름
+		var nameRegex = /^[가-힣A-Za-z]{1,15}$/;
+		// 출생 연도
+		var BirthyyRegex = /^[0-9]{4}$/;
+		// 출생 일자
+		var BirthddRegex = /^(0?[1-9]|[12][0-9]|3[01])$/;
+		// 휴대전화 번호
+		var phoneRegex = /^010-\d{4}-\d{4}$/;
+		// 이메일
+		var EmailRegex = /^[A-Za-z0-9._%+-]{1,64}@[A-Za-z0-9.-]{1,255}\.[A-Za-z]{2,}$/; // 로컬 64자, 도메인 255자 이내
+	 
+		form.addEventListener('submit', function (event) {
+		    const userIDValue = userIDInput.value; // 아이디 입력 필드의 값 가져오기
+			const userPasswordValue = userPasswordInput.value; // 비밀번호 입력 필드의 값 가져오기	
+			const userNameValue = userNameInput.value; // 이름 입력 필드의 값 가져오기
+			const userBirthyyValue = BirthyyInput.value; // 출생 연도 입력 필드의 값 가져오기
+			const userBirthddValue = BirthddInput.value; // 출생 일자 입력 필드의 값 가져오기
+			const userPhoneValue = userPhoneInput.value; // 휴대전화 번호 입력 필드의 값 가져오기
+			const userEmailValue = userEmailInput.value; // 이메일 입력 필드의 값 가져오기
+			
+			// 아이디
+		    if (!IDregex.test(userIDValue)){  // 아이디 조건에 맞지 않는 경우
+				event.preventDefault(); // 폼 제출을 중지합니다.
+				alert("아이디는 5~20자의 영문 소문자, 숫자만 사용 가능합니다.");
+	 	    } 
+		    // 비밀번호
+		    else if (!PasswordRegex.test(userPasswordValue)){
+				event.preventDefault(); // 폼 제출을 중지합니다.
+				alert("비밀번호는 8~16자의 영문 대/소문자, 숫자, 특수문자를 사용해 주세요.");
+		    }
+		    // 이름
+		    else if (!nameRegex.test(userNameValue)){
+				event.preventDefault(); // 폼 제출을 중지합니다.
+		   		alert("이름은 15자 이내의 한글 또는 영문 대/소문자만 입력해주세요.");
+			}
+			// 출생 연도
+			else if (!BirthyyRegex.test(userBirthyyValue)){ 
+				event.preventDefault(); // 폼 제출을 중지합니다.
+				alert("올바른 출생 연도를 입력해주세요. (4자리 숫자)")
+			}
+			// 출생 일자
+			else if (!BirthddRegex.test(userBirthddValue)){
+				event.preventDefault(); // 폼 제출을 중지합니다.
+				alert("올바른 출생 일자를 입력해주세요. (1에서 31 사이의 숫자)")
+			}
+			// 휴대전화 번호
+			else if (!phoneRegex.test(userPhoneValue)){
+				event.preventDefault(); // 폼 제출을 중지합니다.
+				alert("올바른 휴대폰번호를 입력해 주세요.")
+			}
+			// 이메일
+			else if (!EmailRegex.test(userEmailValue)){
+				event.preventDefault(); // 폼 제출을 중지합니다.
+				alert("유효하지 않은 이메일 형식입니다.")
+			}
+			// 유효성 검사 완료 시 폼 제출하여 회원가입 진행
+			else {
+				alert("회원가입 완료 되었습니다.")
+			}			
+		});
+	</script>
 </body>
 </html>
